--- a/about.html
+++ b/about.html
@@ -48,11 +48,10 @@
 		</div>
 		<div class="menu-social-warp">
 			<div class="menu-social">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-whatsapp"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"><span class="icon-facebook" target="_blank"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/"><span class="icon-instagram" target="_blank"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo"><span class="icon-linkedin" target="_blank"></span></a>
 			</div>
 		</div>
 	</div>
@@ -69,23 +68,23 @@
 			<ul>
 				<li><a href="index.html" class="active">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="sm-footer">
 			<div class="sm-socail">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-whatsapp"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"  target="_blank"><span class="icon-facebook"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/" target="_blank"><span class="icon-instagram"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo" target="_blank"><span class="icon-linkedin"></span></a>
 			</div>
 			
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
+
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -101,15 +100,7 @@
 			<div class="site-navigation">
 				<a href="index.html" class="logo m-0 float-start">Nusa Dinamika Solusindo<span class="text-primary">.</span> </a>
 
-				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li><a href="#">Services</a></li>
-					<li><a href="projects.html">Project & Galery</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
+			
 
 				
 
@@ -650,7 +641,7 @@
 							<div class="row">
 							<div class="col-lg-6 order-sm-1">
 								<div class="left-image">
-								<img src="images/team/team-dummy-1.jpg" alt="">
+								<img src="images/team/andreas.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6 col-12 order-sm-2">
@@ -678,7 +669,7 @@
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-2.jpg" alt="">
+								<img src="images/team/ikhsan.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -701,7 +692,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-12 col-12 team-person">
+					<!--<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -727,9 +718,9 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="col-lg-12 col-12 team-person">
+					<!--<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -755,14 +746,14 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-5.jpg" alt="">
+								<img src="images/team/anugerah.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -790,7 +781,7 @@
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-6.jpg" alt="">
+								<img src="images/team/riva.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -816,7 +807,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-12 col-12 team-person">
+				<!--	<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -848,14 +839,14 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-8.jpg" alt="">
+								<img src="images/team/nella.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
