--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 		</div>
 		<div class="menu-social-warp">
 			<div class="menu-social">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-whatsapp"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"><span class="icon-facebook" target="_blank"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/"><span class="icon-instagram" target="_blank"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo"><span class="icon-linkedin" target="_blank"></span></a>
 			</div>
 		</div>
 	</div>
@@ -67,18 +66,17 @@
 			<ul>
 				<li><a href="index.html" class="active">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="sm-footer">
 			<div class="sm-socail">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-whatsapp"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"  target="_blank"><span class="icon-facebook"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/" target="_blank"><span class="icon-instagram"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo" target="_blank"><span class="icon-linkedin"></span></a>
 			</div>
 			
 		</div>
@@ -165,7 +163,7 @@
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
-					<p><a href="about.html" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
+					<p><a href="about.html" class="more-2">Read more <span class="icon-arrow_forward"></span></a></p>
 				</div>
 				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-up" data-aos-delay="500">
 					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
@@ -282,10 +280,12 @@
 	<div class="section sec-3 galery portfolio" id="portfolio">
 		<div class="container">
 			<div class="row mb-5">
-				<div class="col-lg-12" style="color: white;">
-					<h2 class="heading" style="font-size:36px;">Galery</h2>
+				<div class="col-lg-6">
+					<h2 class="heading">Galery</h2>
 				</div>
-				
+				<div class="col-lg-4">
+					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+				</div>
 			</div>
 			<div class="row" data-aos="fade-up" data-aos-delay="100">
 				<div class="col-lg-12 d-flex justify-content-center">
@@ -504,7 +504,7 @@
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-lg-6">
-					<h2 class="heading">News</h2>
+					<h2 class="heading">Article</h2>
 				</div>
 				<div class="col-lg-6">
 					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
@@ -580,7 +580,7 @@
 							<div class="row">
 							<div class="col-lg-6 order-sm-1">
 								<div class="left-image">
-								<img src="images/team/team-dummy-1.jpg" alt="">
+								<img src="images/team/andreas.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6 col-12 order-sm-2">
@@ -608,7 +608,7 @@
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-2.jpg" alt="">
+								<img src="images/team/ikhsan.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -631,7 +631,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-12 col-12 team-person">
+					<!--<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -657,9 +657,9 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="col-lg-12 col-12 team-person">
+					<!--<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -685,14 +685,14 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-5.jpg" alt="">
+								<img src="images/team/anugerah.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -720,7 +720,7 @@
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-6.jpg" alt="">
+								<img src="images/team/riva.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -746,7 +746,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-12 col-12 team-person">
+				<!--	<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
@@ -778,14 +778,14 @@
 							</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-12 col-12 team-person">
 						<div class="main-content">
 							<div class="row">
 							<div class="col-lg-6">
 								<div class="left-image">
-								<img src="images/team/team-dummy-8.jpg" alt="">
+								<img src="images/team/nella.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -819,7 +819,7 @@
 		  </div>
 		</div>
 	  </div>
-
+	  
 	
 	<div class="section sec-contact">
 		<div class="container">			
