--- a/projects.html
+++ b/projects.html
@@ -42,11 +42,10 @@
 		</div>
 		<div class="menu-social-warp">
 			<div class="menu-social">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"><span class="icon-facebook" target="_blank"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/"><span class="icon-instagram" target="_blank"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo"><span class="icon-linkedin" target="_blank"></span></a>
 			</div>
 		</div>
 	</div>
@@ -63,23 +62,23 @@
 			<ul>
 				<li><a href="index.html" class="active">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="sm-footer">
 			<div class="sm-socail">
-				<a href="#"><span class="icon-facebook"></span></a>
-				<a href="#"><span class="icon-twitter"></span></a>
-				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
-				<a href="#"><span class="icon-linkedin"></span></a>
+				<a href="https://www.facebook.com/NusaDinamikaSolusindo"  target="_blank"><span class="icon-facebook"></span></a>
+				<a href="https://www.instagram.com/ndsengineering/" target="_blank"><span class="icon-instagram"></span></a>
+				<a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a>
+				<a href="https://www.linkedin.com/company/nusa-dinamika-solusindo" target="_blank"><span class="icon-linkedin"></span></a>
 			</div>
 			
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
+
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -95,15 +94,7 @@
 			<div class="site-navigation">
 				<a href="index.html" class="logo m-0 float-start">Nusa Dinamika Solusindo<span class="text-primary">.</span> </a>
 
-				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li><a href="#">Services</a></li>
-					<li><a href="projects.html">Project & Galery</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
+			
 
 				
 
@@ -563,7 +554,7 @@
 
 			  
 
-			<div class="row g-4 portfolio-container" data-aos="fade-up" data-aos-delay="500">
+			<div class="row g-4 portfolio-container col-12" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic transition">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="images/projects/SI AP 2.jpg" data-gallery="galery" class="portfokio-lightbox" title="">
