--- a/about.html
+++ b/about.html
@@ -155,6 +155,24 @@
 		
 	</div>
 
+	<div class="certificate" data-aos="fade-up" data-aos-delay="500">
+		<div class="container">
+			<div class="row">
+				<div class="gap-certified gap-certified d-flex justify-content-start">
+					<div class="certified-image">
+						<img src="images/certificate/iso1.jpg" alt="">
+					</div>
+					<div class="certified-image">
+						<img src="images/certificate/iso2.jpg" alt="">
+					</div>
+					<div class="certified-image">
+						<img src="images/certificate/iso3.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 
 
