--- a/projects.html
+++ b/projects.html
@@ -125,6 +125,24 @@
 		</div>
 	</div>
 
+	<div class="certificate" data-aos="fade-up" data-aos-delay="500">
+		<div class="container">
+			<div class="row">
+				<div class="gap-certified gap-certified d-flex justify-content-start">
+					<div class="certified-image">
+						<img src="images/certificate/iso1.jpg" alt="">
+					</div>
+					<div class="certified-image">
+						<img src="images/certificate/iso2.jpg" alt="">
+					</div>
+					<div class="certified-image">
+						<img src="images/certificate/iso3.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="section resume-section ftco-section ftco-no-pb goto-here" id="resume-section">
 		<div class="container py-5">
 			<div class="row mb-5">
