--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 		
 	</div>
 
-	<div class="certificate" data-aos="fade-up" data-aos-delay="500">
+	<div class="certificate">
 		<div class="container">
 			<div class="row">
 				<div class="gap-certified gap-certified d-flex justify-content-start">
