--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		
 	</div>
 
-	<div class="certificate" data-aos="fade-up" data-aos-delay="500">
+	<div class="certificate">
 		<div class="container">
 			<div class="row">
 				<div class="gap-certified gap-certified d-flex justify-content-start">
@@ -177,13 +177,13 @@
 	<div class="section sec-1 about" id="about">
 		<div class="container">
 			<div class="row g-0">
-				<div class="col-lg-4 order-1">
+				<div class="col-lg-4 order-1"  data-aos="fade-right">
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
 					<p><a href="about.html" class="more-2">Read more <span class="icon-arrow_forward"></span></a></p>
 				</div>
-				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-left" data-aos-delay="500">
 					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
 				</div>
 			</div>
@@ -202,7 +202,7 @@
 				</div>
 			</div>
 			<div class="row g-5">
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
 
 					<div class="d-flex custom-card">
 						<div class="img">
@@ -217,7 +217,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Geophysics.png" alt="">
@@ -231,7 +231,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="500">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Lab Test.png" alt="">
@@ -247,7 +247,7 @@
 				</div>
 
 
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
 
 					<div class="d-flex custom-card">
 						<div class="img">
@@ -262,7 +262,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Soil Investigation.png" alt="">
@@ -276,7 +276,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="500">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Topographic Survey.png" alt="">
@@ -583,14 +583,14 @@
 	<div class="infos section" id="infos">
 		<div class="row mb-5">
 			<div class="col-lg-6 mx-auto text-center">
-				<h2 class="heading">We Are The Team</h2>
-				<p>Our team of designers, engineers, and compliance experts are dedicated to your success throughout the project 
+				<h2 class="heading" data-aos="fade-up" data-aos-delay="500">We Are The Team</h2>
+				<p data-aos="fade-up" data-aos-delay="500">Our team of designers, engineers, and compliance experts are dedicated to your success throughout the project 
 					lifecycle. We pride ourselves on being able to provide innovative solutions to meet the toughest of scenarios. Our 
 					team is built around the principle of delivering to tight time-scales whilst maintaining our high standards of quality</p>
 			</div>
 			
 		</div>
-		<div class="container team-page">
+		<div class="container team-page" data-aos="fade-up" data-aos-delay="500">
 		  <div class="row">
 			  <div class="team-navi justify-content-center align-items-center col-lg-12" id="team-navi">
 					<div class="col-lg-12 team-person">
