--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
 		</div>
 	</div>
 
-	<div class="certificate" data-aos="fade-up" data-aos-delay="500">
+	<div class="certificate">
 		<div class="container">
 			<div class="row">
 				<div class="gap-certified gap-certified d-flex justify-content-start">
@@ -143,7 +143,7 @@
 		</div>
 	</div>
 
-	<div class="section resume-section ftco-section ftco-no-pb goto-here" id="resume-section">
+	<div class="section resume-section ftco-section ftco-no-pb goto-here" id="resume-section"  data-aos="fade-up">
 		<div class="container py-5">
 			<div class="row mb-5">
 				<div class="col-lg-6">
