--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
 
 
 	<div class="section sec-4">
-		<div class="container" data-aos="fade-up" data-aos-delay="500">
+		<div class="container">
 			<div class="row mb-5">
-				<div class="col-lg-4">
+				<div class="col-lg-4" data-aos="fade-right" data-aos-delay="300">
 					<h2 class="heading">Services</h2>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8"  data-aos="fade-left" data-aos-delay="400">
 					<p>NDS Engineering have successfully worked on many small and large-scale projects. Our team uses innovative and advancing technology in each project, whilst also keeping your needs at the forefront of their mind. Throughout the duration of each project, our team takes the time to understand your needs and communicates with you. Our projects have been commended on several occasions. This is because we provide superior service and pay attention to every detail.</p>
 				</div>
 			</div>
@@ -321,7 +321,7 @@
 
 			  
 
-			<div class="row g-4 portfolio-container">
+			<div class="row g-4 portfolio-container"  data-aos="fade-up" data-aos-delay="500">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item transition filter-basic" data-category="filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a>
@@ -938,7 +938,7 @@
 		<div class="container">
 
 			<div class="row justify-content-between mt-5">
-				<div class="col-lg-4">
+				<div class="col-lg-4"  data-aos="fade-right" data-aos-delay="500">
 					<div class="widget">
 						<h3 class="line-top">About</h3>
 						<p class="mb-5">We acknowledge that our future is tied to the future of our clients, and we drive for excellence in our services and innovation in our solutions to improve our client’s outcomes both technically and commercially.</p>
@@ -955,7 +955,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6"  data-aos="fade-left" data-aos-delay="500">
 					<div class="row">
 						<div class="col-12">
 							<div class="widget">
