--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html" class="active">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html" class="active">About</a></li>
 				<li><a href="projects.html">Projects</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -983,6 +983,35 @@
 		  </div>
 		</div>
 	  </div>
+
+
+	<div class="div section company-profile">
+		<div class="col-lg-8 mx-auto text-center">
+			<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="500">Company Profile</h2>
+			<p data-aos="fade-up" data-aos-delay="500">Get to know us better with our company profile. Discover our mission, vision, and values, as well as the people and processes that drive us forward. Take a closer look at our achievements, partnerships, and projects that have made us a leading player in our industry. Experience the difference of doing business with a company that puts its customers first. Get your copy of our company profile today.</p>
+			<button data-aos="fade-up" data-aos-delay="500" class="mt-3"> <a href="images/compro/NDS Company Profile 2020.pdf" download="NDS Company Profile 2020.pdf"> Download PDF </a></button>
+		</div>
+
+		<div class="col-lg-10 compro-visual d-flex align-items-center justify-content-center">
+			<div class="container" data-aos="fade-up" data-aos-delay="200">
+				<div class="row">
+					<div class="image-1">
+						<img data-aos="fade-up" data-aos-delay="200" src="images/compro/NDS Company Profile 2020_page-0001.jpg" alt="">
+					</div>
+
+					<div data-aos="fade-up" data-aos-delay="300" class="image-2">
+						<img src="images/compro/NDS Company Profile 2020_page-0002.jpg" alt="">
+					</div>
+
+					<div data-aos="fade-up" data-aos-delay="500" class="image-3">
+						<img src="images/compro/NDS Company Profile 2020_page-0006.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div>
 	  
 	
 	
