--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,9 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="projects.html" class="active">Projects</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
