--- a/index.html
+++ b/index.html
@@ -197,48 +197,48 @@
 				<div class="col-lg-4" data-aos="fade-right" data-aos-delay="300">
 					<h2 class="heading">Services</h2>
 				</div>
-				<div class="col-lg-8"  data-aos="fade-left" data-aos-delay="400">
+				<div class="col-lg-8"  data-aos="fade-left" data-aos-delay="300">
 					<p>NDS Engineering have successfully worked on many small and large-scale projects. Our team uses innovative and advancing technology in each project, whilst also keeping your needs at the forefront of their mind. Throughout the duration of each project, our team takes the time to understand your needs and communicates with you. Our projects have been commended on several occasions. This is because we provide superior service and pay attention to every detail.</p>
 				</div>
 			</div>
 			<div class="row g-5">
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+				<div class="col-lg-4">
 
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Engineering Design.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Engineering Design</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Engineering Design</h3>
+							<p class="text-black">Engineering design involves the application of scientific and mathematical principles, as well as knowledge of materials and manufacturing processes, to create a product or system that meets specific requirements and constraints.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
+				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Geophysics.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Geophysics</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Geophysics</h3>
+							<p class="text-black">Geophysics is a branch of earth sciences that uses physical methods, such as seismology, gravity, magnetism, and electrical and electromagnetic techniques, to study the Earth's internal structure, composition, and processes.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Lab Test.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Lab Test</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Lab Test</h3>
+							<p class="text-black">A laboratory test is a procedure performed in a controlled environment, such as a laboratory, to measure, analyze, or evaluate a sample of material, such as a substance, a product, in order to determine its characteristics, properties, or composition.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -247,43 +247,43 @@
 				</div>
 
 
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+				<div class="col-lg-4">
 
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Material Structural Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Material Structural Investigation</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Material Structural Investigation</h3>
+							<p class="text-black">The results of Material Structural Investigation can inform the design, selection, and optimization of materials for specific applications, and ensure their long-term reliability and safety.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
+				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Soil Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Soil Investigation</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Soil Investigation</h3>
+							<p class="text-black">Soil investigation typically involves collecting and analyzing soil samples from a specific site, and determining its characteristics, such as composition, texture, density, strength, permeability, and water content.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
 							<img src="images/Icon/Topographic Survey.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Topographic Survey</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Topographic Survey</h3>
+							<p class="text-black">Topographic survey is a type of survey that involves the measurement and mapping of the natural and man-made features of a piece of land, including its elevations, contours, and surface features.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
