--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
 		<div class="container" data-aos="fade-up">
   
 		  <div class="row justify-content-around gy-4">
-			<div class="col-lg-6 img-bg order-1 mb-5" style="background-image: url(images/mission.jpg);" data-aos="zoom-in"
+			<div class="col-lg-6 img-bg order-1 mb-5" style="background-image: url(images/mission.jpg);" data-aos="fade-up"
 			  data-aos-delay="100">
 			</div>
   
@@ -308,7 +308,7 @@
 					<h2 class="heading">Services</h2>
 				</div>
 				<div class="col-lg-4">
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+					<p> Our experienced project managers are dedicated to ensuring that every aspect of your construction project is executed efficiently and effectively. From the planning and design phase to the final inspection and closeout, we provide expert guidance and support to ensure that your project stays on track and within budget.</p>
 				</div>
 			</div>
 			<div class="row g-5" data-aos="fade-up" data-aos-delay="500">
@@ -319,8 +319,8 @@
 							<img src="images/Icon/Engineering Design.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Engineering Design</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Engineering Design</h3>
+							<p class="text-black">Engineering design involves the application of scientific and mathematical principles, as well as knowledge of materials and manufacturing processes, to create a product or system that meets specific requirements and constraints.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -333,8 +333,8 @@
 							<img src="images/Icon/Geophysics.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Geophysics</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Geophysics</h3>
+							<p class="text-black">Geophysics is a branch of earth sciences that uses physical methods, such as seismology, gravity, magnetism, and electrical and electromagnetic techniques, to study the Earth's internal structure, composition, and processes.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -347,8 +347,8 @@
 							<img src="images/Icon/Lab Test.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Lab Test</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Lab Test</h3>
+							<p class="text-black">A laboratory test is a procedure performed in a controlled environment, such as a laboratory, to measure, analyze, or evaluate a sample of material, such as a substance, a product, in order to determine its characteristics, properties, or composition.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -364,8 +364,8 @@
 							<img src="images/Icon/Material Structural Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Material Structural Investigation</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Material Structural Investigation</h3>
+							<p class="text-black">The results of Material Structural Investigation can inform the design, selection, and optimization of materials for specific applications, and ensure their long-term reliability and safety.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -378,8 +378,8 @@
 							<img src="images/Icon/Soil Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Soil Investigation</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Soil Investigation</h3>
+							<p class="text-black">Soil investigation typically involves collecting and analyzing soil samples from a specific site, and determining its characteristics, such as composition, texture, density, strength, permeability, and water content.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -392,8 +392,8 @@
 							<img src="images/Icon/Topographic Survey.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Topographic Survey</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
+							<h3 class="h6 fw-bold text-black mb-3">Topographic Survey</h3>
+							<p class="text-black">Topographic survey is a type of survey that involves the measurement and mapping of the natural and man-made features of a piece of land, including its elevations, contours, and surface features.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
 							</p>
@@ -403,7 +403,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+
 
 
 		<div class="timeline-carousel section">
@@ -986,7 +986,7 @@
 
 
 	<div class="div section company-profile">
-		<div class="col-lg-8 mx-auto text-center">
+		<div class="col-lg-6 mx-auto text-center">
 			<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="500">Company Profile</h2>
 			<p data-aos="fade-up" data-aos-delay="500">Get to know us better with our company profile. Discover our mission, vision, and values, as well as the people and processes that drive us forward. Take a closer look at our achievements, partnerships, and projects that have made us a leading player in our industry. Experience the difference of doing business with a company that puts its customers first. Get your copy of our company profile today.</p>
 			<button data-aos="fade-up" data-aos-delay="500" class="mt-3"> <a href="images/compro/NDS Company Profile 2020.pdf" download="NDS Company Profile 2020.pdf"> Download PDF </a></button>
